tests/baselines/reference/stringIndexerAndConstructor1.errors.txt
tests/cases/compiler/stringIndexerAndConstructor1.ts(3,5): error TS2411: Property '""' of type '文字' is not assignable to string index type '数字'.


==== tests/cases/compiler/stringIndexerAndConstructor1.ts (1 errors) ====
    interface I {
        [s: string]: number;
        "": string;
        ~~~~~~~~~~~
!!! error TS2411: Property '""' of type '文字' is not assignable to string index type '数字'.
    }